2012-11-30  Morphe  <Morphe@Morphe-PC>

	* ChangeLog: Created new changelog
	