@@ -13,14 +13,21 @@ namespace Tabs {
 
 Tab::Tab() {
 	// Check if we are convertible to Widget
-	assert((Widget*) this != nullptr);
+	assert(dynamic_cast<Widget*> ((Widget*)this) != nullptr);
+
+	controller_ = SharePtr(new TabController());
 }
 
 Tab::~Tab() {
 }
 
 Widget* Tab::getThisWidget() {
-	return dynamic_cast<Widget*> (this);
+	return (Widget*) this;
+}
+
+void Tab::changeController(std::shared_ptr<TabController> newController) {
+	// If we were the only tab, holding that controller - it will be deleted
+	controller_ = newController;
 }
 
 } /* namespace Tabs */
